create vars in sass

--- a/front/styles/_adjustment.sass
+++ b/front/styles/_adjustment.sass
@@ -9,12 +9,14 @@ html, body
 	margin: 0
 	padding: 0
 
-.maincontent 
-	flex: 1 0
+.maincontent
 	display: flex
-	flex-direction: row
-	align-content: space-between
+	width: 100%
+	height: 100vh
+	flex-direction: column
 
+.footer
+	flex: 1 0 auto
 
 ul, ol
 	list-style: none
@@ -33,3 +35,19 @@ h1, h2, h3, h4, h5, h6, p
 .container
 	margin: auto
 	display: flex
+	width: 1200px
+
+.j-c-s-a
+	justify-content: space-around
+
+.f-d-c
+	flex-direction: column
+
+.j-c-c
+	justify-content: center
+
+.login
+	display: flex
+	flex-direction: column
+	margin: 0 auto
+	width: 30%
