--- a/front/styles/_variables.sass
+++ b/front/styles/_variables.sass
@@ -1,6 +1,11 @@
 //  Color
-    $white:                                     #fff
-    $black:                                     #000
+$white:                                     #fff
+$black:                                     #000000
+$lightGrey:                                 #eeeeee
+$darkGrey:                                  #3f3f3f
+$blue:                                      #017CEA
 
 //  Fonts
-    $basicFont:                                 "sanserif"
+$basicFont:                                 "Roboto"
+$mainFont:                                  "Noto-Sans-Jp"
+$TitleFont:                                 "Rammetto-One"
