include style for map

--- a/front/styles/_libs.sass
+++ b/front/styles/_libs.sass
@@ -1,2 +1,2 @@
 @import "../public/libs/normalize.css"
-@import "https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"
+@import "https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
