include sass files

--- a/front/styles/main.sass
+++ b/front/styles/main.sass
@@ -5,3 +5,12 @@
 @import "adjustment"
 @import "../pages/components/header/header"
 @import "../pages/components/footer/footer"
+@import "../pages/components/main-top-block/main-top-block"
+@import "../pages/components/main-view-select/main-view-select"
+@import "../pages/components/cooperation/cooperation"
+@import "../pages/components/main-info/main-info"
+@import "../pages/components/main-about/main-about"
+@import "../pages/components/instruction/instruction"
+@import "../pages/components/search/main"
+@import "../pages/components/register/main"
+@import "../pages/components/create-ad/main"
