--- a/front/pages/components/footer/_footer.sass
+++ b/front/pages/components/footer/_footer.sass
@@ -22,6 +22,12 @@
         height: 50px
         background-size: 80px 40px
         background-image: radial-gradient(circle at 20px 23px, $blue 20px, transparent 21px)
+    @include largeDevice 
+        margin-top: 80px
+        padding: 30px 0 15px 0
+    @include smallDevice 
+        margin-top: 50px
+        padding: 20px 0 10px 0
 
 .footer__social-list
     width: 250px
@@ -38,9 +44,15 @@
     align-items: center
     border-radius: 50%
     border: solid 1px $white
+    transition: all ease-in .3s
     i
         color: $white
         font-size: 1.5rem
+        margin: 2px 1px 0 0
+    &:hover
+        background: $white
+        i
+            color: $blue
 
 .footer__bottom
     margin-top: 45px
