--- a/front/pages/components/instruction/_instruction.sass
+++ b/front/pages/components/instruction/_instruction.sass
@@ -7,18 +7,29 @@
     &::after
         content: ''
         width: 50%
-        height: 90%
+        height: 100%
         position: absolute
         bottom: 0
         right: 0
         background: url(../../../public/img/bg-instruction.svg) no-repeat
+    @include largeDevice
+        padding: 100px 0
+    @include mediumDevice 
+        padding: 80px 0
+        &::after
+            background: none
 
 .main-instuction__wrap
     width: 50%
     margin: 0 auto 0 0
+    @include mediumDevice 
+        margin: 0
+        width: 100%
 
 .main-instuction__title, .instuction-advice__title
     @include font ($basicFont, 2rem, $black)
+    @include mediumDevice 
+        font-size: 1.7rem
 
 .main-instuction__list, .instuction-advice__list
     margin-top: 30px
@@ -39,13 +50,29 @@
         width: 50%
         height: 100%
         position: absolute
-        bottom: 0
+        bottom: 50%
         left: 5%
+        transform: translateY(60%)
         background: url(../../../public/img/bg-instruction-ok.svg) no-repeat
+    @include largeDevice
+        &::after
+            left: -5%
+    @include mediumDevice 
+        padding: 50px 0
+        &::after
+            background-size: 90%
+    @include smallDevice 
+        &::after
+            background: none
 
 .instuction-advice__wrap
     width: 50%
     margin: 0 0 0 auto
+    @include mediumDevice
+        width: 65% 
+    @include smallDevice 
+        margin: 0
+        width: 100%
 
 .main-instuction__icon
     width: 15px
@@ -58,9 +85,13 @@
     border-radius: 50%
     margin-right: 15px
     @include font ($basicFont, 1.5rem, $blue)
+    @include mediumDevice 
+        font-size: 1rem
 
 .instuction-advice__icon
     display: flex
     margin-right: 15px
     color: $blue
     font-size: 1.5rem
+    @include mediumDevice 
+        font-size: 1rem
