--- a/front/pages/components/cooperation/_cooperation.sass
+++ b/front/pages/components/cooperation/_cooperation.sass
@@ -1,15 +1,38 @@
 .cooperation
     background: $blue
     padding: 50px 0
+    @include mediumDevice
+        padding: 30px 0
+    @include smallDevice
+        padding: 20px 0
 
 .cooperation__title
     margin-top: 0
     text-align: center
     font-weight: 300
     @include font ($basicFont, 3rem, $white)
+    @include largeDevice
+        font-size: 2.5rem
+    @include mediumDevice
+        margin-top: 0
+        font-size: 2rem
+    @include smallDevice
+        font-size: 1.5rem
+    @include extraSmallDevice
+        font-size: 1.1rem
 
 .cooperation__link
     margin-top: 30px
     text-align: center
     font-weight: 700
     @include font ($basicFont, 2.5rem, $white)
+    @include largeDevice
+        font-size: 2rem
+    @include mediumDevice
+        margin-top: 15px
+        font-size: 1.5rem
+    @include smallDevice
+        margin-top: 10px
+        font-size: 1rem
+    @include extraSmallDevice
+        font-size: 0.8rem
