change margin top for media

--- a/front/pages/components/footer/_footer.sass
+++ b/front/pages/components/footer/_footer.sass
@@ -25,6 +25,7 @@
     @include largeDevice 
         padding: 20px 0 15px 0
     @include smallDevice 
+        margin-top: 50px
         padding: 10px 0 10px 0
 
 .footer__social-list
