--- a/front/pages/components/header/_header.sass
+++ b/front/pages/components/header/_header.sass
@@ -31,7 +31,7 @@
         color: $white
         span 
             color: $white
-    @include smallDevice 
+    @include largeDevice 
         i
             margin-right: 0
         span
