--- a/front/pages/components/main-about/_main-about.sass
+++ b/front/pages/components/main-about/_main-about.sass
@@ -9,10 +9,18 @@
         position: absolute
         left: 12%
         top: 0
-    
+    @include largeDevice
+        padding: 80px 0
+        &::after
+            background: none
+    @include smallDevice
+        padding: 50px 0
+
 .main-about__info
     width: 50%
     margin-left: auto
+    @include largeDevice
+        width: 100%
 
 .main-about__title
     font-weight: 700
@@ -26,6 +34,9 @@
     margin-top: 40px
     display: flex
     justify-content: space-between
+    @include smallDevice
+        flex-wrap: wrap
+        margin: 0
 
 .main-about__item
     display: flex
@@ -37,7 +48,11 @@
         padding: 10px
         border-radius: 50%
         font-size: 1.2rem
+    @include smallDevice
+        margin-top: 30px
+        width: 50%
 
 .main-about__item-descr
     text-align: center
     @include font ($basicFont, 1rem, $darkGrey)
+    @include smallDevice
