--- a/front/styles/_adjustment.sass
+++ b/front/styles/_adjustment.sass
@@ -34,6 +34,10 @@ h1, h2, h3, h4, h5, h6, p
 	margin: auto
 	display: flex
 	width: 1200px
+	@include largeDevice
+		width: 700px
+	@include mediumDevice
+		width: 90%
 
 .j-c-s-a
 	justify-content: space-around
