import post style page and del import map style lib

--- a/front/styles/main.sass
+++ b/front/styles/main.sass
@@ -14,3 +14,4 @@
 @import "../pages/components/search/main"
 @import "../pages/components/register/main"
 @import "../pages/components/create-ad/main"
+@import "../pages/post/main"
