change footer magrin

--- a/front/pages/components/footer/_footer.sass
+++ b/front/pages/components/footer/_footer.sass
@@ -1,5 +1,5 @@
 .footer
-    margin-top: 100px
+    margin-top: auto
     background: $blue
     position: relative
     padding: 50px 0 15px 0
@@ -25,7 +25,6 @@
     @include largeDevice 
         padding: 20px 0 15px 0
     @include smallDevice 
-        margin-top: 50px
         padding: 10px 0 10px 0
 
 .footer__social-list
