--- a/front/pages/components/main-info/_main-info.sass
+++ b/front/pages/components/main-info/_main-info.sass
@@ -1,7 +1,9 @@
 .main-info
     padding: 50px 0
+    padding-bottom: 100px
     @include smallDevice
         padding: 30px 0
+        padding-bottom: 70px
 
 .main-info__title
     text-align: center
