--- a/front/pages/components/instruction/_instruction.sass
+++ b/front/pages/components/instruction/_instruction.sass
@@ -44,6 +44,7 @@
 
 .instuction-advice
     padding: 80px 0
+    padding-bottom: 150px
     position: relative
     &::after
         content: ''
@@ -59,6 +60,7 @@
             left: -5%
     @include mediumDevice 
         padding: 50px 0
+        padding-bottom: 100px
         &::after
             background-size: 90%
     @include smallDevice 
