--- a/front/pages/components/search/_main.sass
+++ b/front/pages/components/search/_main.sass
@@ -70,6 +70,7 @@
     background: $blue !important
     border: 1px solid transparent !important
     transition: all ease-in .3s
+    @include font ($mainFont, 1rem, $black)
     &:hover
         color: $blue !important
         background: $white !important
@@ -81,6 +82,20 @@
         width: 100%
         margin: 0
         margin-top: 5px
+
+.sort__search-btn
+    margin-top: 20px
+    margin-left: 5px
+    padding: 15px !important
+    width: calc( (100% - 10px) / 3 )
+    display: flex
+    align-items: center
+    justify-content: center
+    transition: all ease-in .3s
+    @include font ($mainFont, 1rem, $black)
+    &:hover
+        color: $white
+        background: $blue
 
 .search__lists--show
     display: none
