--- a/front/components/search-item/_main.sass
+++ b/front/components/search-item/_main.sass
@@ -1,7 +1,7 @@
 .search__item-article
     display: flex
     position: relative
-    padding: 15px 0
+    margin: 15px 0
     &::before
         content: ''
         width: 100%
