--- a/front/pages/search/_main.sass
+++ b/front/pages/search/_main.sass
@@ -2,6 +2,24 @@
     display: flex
     @media screen and (max-width: 1040px) 
         flex-direction: column
+    > #map
+        width: 50%
+        height: 100vh
+        @include largeDevice 
+            width: 35%
+        @media screen and (max-width: 1040px) 
+            position: relative
+            height: 40vh
+            width: 100%
+            &::after
+                content: ''
+                width: 100%
+                height: 10px
+                position: absolute
+                left: 0
+                top: 0
+                background: $blue
+                z-index: 999
     
 .search
     width: 50%
@@ -12,25 +30,6 @@
     @media screen and (max-width: 1040px) 
         height: 60vh
         width: 100%
-
-#map
-    width: 50%
-    height: 100vh
-    @include largeDevice 
-        width: 35%
-    @media screen and (max-width: 1040px) 
-        position: relative
-        height: 40vh
-        width: 100%
-        &::after
-            content: ''
-            width: 100%
-            height: 10px
-            position: absolute
-            left: 0
-            top: 0
-            background: $blue
-            z-index: 999
 
 .search__list-article
     display: flex
