change links / url / import

--- a/front/pages/instruction/_instruction.sass
+++ b/front/pages/instruction/_instruction.sass
@@ -11,7 +11,7 @@
         position: absolute
         bottom: 0
         right: 0
-        background: url(../../../public/img/bg-instruction.svg) no-repeat
+        background: url(../../public/img/bg-instruction.svg) no-repeat
     @include largeDevice
         padding: 100px 0
     @include mediumDevice 
@@ -54,7 +54,7 @@
         bottom: 50%
         left: 5%
         transform: translateY(60%)
-        background: url(../../../public/img/bg-instruction-ok.svg) no-repeat
+        background: url(../../public/img/bg-instruction-ok.svg) no-repeat
     @include largeDevice
         &::after
             left: -5%
