--- a/front/styles/main.sass
+++ b/front/styles/main.sass
@@ -3,15 +3,17 @@
 @import "variables"
 @import "mixin"
 @import "adjustment"
-@import "../pages/components/header/header"
-@import "../pages/components/footer/footer"
-@import "../pages/components/main-top-block/main-top-block"
-@import "../pages/components/main-view-select/main-view-select"
-@import "../pages/components/cooperation/cooperation"
-@import "../pages/components/main-info/main-info"
-@import "../pages/components/main-about/main-about"
-@import "../pages/components/instruction/instruction"
-@import "../pages/components/search/main"
-@import "../pages/components/register/main"
-@import "../pages/components/create-ad/main"
+@import "../components/header/header"
+@import "../components/footer/footer"
+@import "../components/main/main-top-block/main-top-block"
+@import "../components/main/main-view-select/main-view-select"
+@import "../components/main/cooperation/cooperation"
+@import "../components/main/main-info/main-info"
+@import "../components/main/main-about/main-about"
+@import "../pages/instruction/instruction"
+@import "../pages/search/main"
+@import "../components/search-item/main"
+@import "../pages/register/main"
+@import "../pages/create-ad/main"
 @import "../pages/post/main"
+@import "../pages/search/form/main"
