axios create ad

--- a/front/pages/create-ad/_main.sass
+++ b/front/pages/create-ad/_main.sass
@@ -26,6 +26,10 @@
 
 .create-ad__form
     margin-top: 30px
+    > #map
+        margin-top: 10px
+        width: 100% !important
+        height: 200px !important
 
 .create-ad__list
     display: flex
@@ -82,11 +86,6 @@
             margin-left: 0
         &:first-child
             margin: 0
-
-.create__map
-    margin-top: 10px
-    width: 100% !important
-    height: 200px !important
 
 .create__file-style
     cursor: pointer
