--- a/front/pages/post/_main.sass
+++ b/front/pages/post/_main.sass
@@ -15,9 +15,24 @@
         height: 350px
         overflow: hidden
         margin-right: 10px
-    > .post__map
-        width: 25% !important
-        height: 100% !important
+    > #map
+        width: 50%
+        height: 100%
+        @include largeDevice 
+            width: 35%
+        @media screen and (max-width: 1040px) 
+            position: relative
+            height: 40vh
+            width: 100%
+            &::after
+                content: ''
+                width: 100%
+                height: 10px
+                position: absolute
+                left: 0
+                top: 0
+                background: $blue
+                z-index: 999
     @media screen and (max-width: 1040px) 
         flex-direction: column
         > .slick-slider
@@ -59,9 +74,6 @@
     width: 100%
     height: 400px
     flex-shrink:0
-
-.post__info-map--wrap
-    display: flex
 
 .post__info-user
     width: 100%
@@ -153,7 +165,7 @@
         color: $black
         background: $white
 
-.post__info-map--wrap
+.post__info-map
     margin-top: 10px
     display: flex
     justify-content: space-between
